added one comment

--- a/main.tex
+++ b/main.tex
@@ -283,6 +283,7 @@ Let $$w_n = \begin{pmatrix}
 	& \iddots\\
 	1
 \end{pmatrix} \in \GL_n\left(\finiteField\right)$$ be the longest Weyl element.
+\calvin{we should standardize an order between Unitary, Special Orthogonal Symplectic and try to kinda stick with it throughout.}
 \begin{enumerate}
 	\item (Special orthogonal groups): $\quadraticExtension = \finiteField$ and $\epsilon_{\hermitianSpace} = 1$. It follows by definition that every element $g \in \IsometryGroup\left(\hermitianSpace\right)$ satisfies $\left(\det g\right)^2 = 1$.  In this case, we obtain the connected components of the identity by adding a restriction on the determinant: We have that $G$ consists of all elements $g \in \IsometryGroup\left(\hermitianSpace\right)$ with $\det g = 1$. There are two cases here.
 	\begin{enumerate}
